crates/test-ui/ui/call_unavailable_method.stderr
error[E0599]: no associated function or constant named `new` found for struct `NSUnit` in the current scope
 --> ui/call_unavailable_method.rs
  |
  |     let _ = NSUnit::new();
  |                     ^^^ associated function or constant not found in `NSUnit`
  |
help: there is a method `ne` with a similar name, but with different arguments
 --> $RUST/core/src/cmp.rs
  |
  |     fn ne(&self, other: &Rhs) -> bool {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: the function `new` is implemented on `NSObject`
 --> ui/call_unavailable_method.rs
  |
  |     let _ = NSUnit::new();
  |             ^^^^^^
